--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,7 +5,7 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "cors-header-proxy",
-	"main": "src/index.ts",
+	"main": "src/index.js",
 	"compatibility_date": "2025-04-03",
 	"observability": {
 		"enabled": true
